# ProgPOW

./: .bumpversion.cfg  .gitignore  CMakeLists.txt  ProgPoW.md  README.md  appveyor.yml
ethminer/: CMakeLists.txt  MinerAux.h  main.cpp
libapicore/: ApiServer.cpp
libethash-cl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libethash-cl/kernels/cl/: progpow.cl
libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  ProgPoW_kernel.cu  cuda_helper.h  ethash_cuda_miner_kernel.h
libethcore/: Farm.h  Miner.h
libpoolprotocols/stratum/: EthStratumClient.cpp
libprogpow/: ProgPow.cpp  ProgPow.h
